--- a/Recipe Master/Views/CategoryTableViewCell.xib
+++ b/Recipe Master/Views/CategoryTableViewCell.xib
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -48,7 +47,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="categoryBubble" destination="O1m-Lv-GNp" id="hur-qD-Pka"/>
-                <outlet property="categoryLabel" destination="Lj1-IE-h4N" id="YwY-hr-0lr"/>
+                <outlet property="label" destination="Lj1-IE-h4N" id="YwY-hr-0lr"/>
             </connections>
             <point key="canvasLocation" x="102.17391304347827" y="67.96875"/>
         </tableViewCell>
